[gd_scene load_steps=12 format=3 uid="uid://cenqjxi1iiujh"]

[ext_resource type="Script" uid="uid://cv2w3p2sp0bis" path="res://tutorial_mode.gd" id="1_lr75e"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="1_wf4ld"]
[ext_resource type="Texture2D" uid="uid://cdqv6heddyqna" path="res://Menu Assets/Button.png" id="2_yiv6j"]
[ext_resource type="FontFile" uid="uid://bsdm1pj7st7rm" path="res://Font/Modular Amplitude.otf" id="3_lr75e"]
[ext_resource type="Texture2D" uid="uid://b0p5bu7iwysrl" path="res://Menu Assets/Button_Highlight.png" id="4_yiv6j"]
[ext_resource type="FontFile" uid="uid://blpqqpdiclhio" path="res://Font/San Marino.otf" id="6_g7vc6"]

[sub_resource type="Animation" id="Animation_lr75e"]
resource_name = "pop_up_anim"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(104, 1120), Vector2(104, 112), Vector2(104, 216)]
}

[sub_resource type="Animation" id="Animation_g7vc6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(104, 216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btk02"]
_data = {
&"RESET": SubResource("Animation_g7vc6"),
&"pop_up_anim": SubResource("Animation_lr75e")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g7vc6"]
texture = ExtResource("2_yiv6j")
texture_margin_left = 100.0
texture_margin_top = 100.0
texture_margin_right = 100.0
texture_margin_bottom = 100.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_btk02"]
texture = ExtResource("2_yiv6j")
texture_margin_left = 100.0
texture_margin_top = 100.0
texture_margin_right = 100.0
texture_margin_bottom = 100.0

[node name="TutorialMode" type="CanvasLayer"]
script = ExtResource("1_lr75e")

[node name="tutorialText" type="TextureRect" parent="."]
visible = false
material = ExtResource("1_wf4ld")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -712.0
offset_top = 268.0
offset_right = 2725.0
offset_bottom = 912.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.421256, 0.421256)
texture = ExtResource("2_yiv6j")

[node name="tutorialtextholder" type="Control" parent="tutorialText"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="text1" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "This is the main menu
You will see here the play, notes, and settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text2" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "This is the play menu
this is where you will learn all the lessons"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text3" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "each lessons will have
learning, practice and challenge"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text4" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "in order to progress you must each lesson's
challenge mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text5" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "Check the rubrics for the passing grade
in play menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text6" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "next is the notes section"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text7" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "as you can see all notes are locked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text8" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "you have to pass the challenge mode
of each lessons to unlock these notes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text9" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "next is the settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text10" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "you can toggle the audio here 
and the dark mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text11" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "the game autosaves your progress 
after each try of the lesson"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text12" type="Label" parent="tutorialText/tutorialtextholder"]
visible = false
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 226.881
offset_top = 151.927
offset_right = 2413.88
offset_bottom = 338.927
grow_horizontal = 2
scale = Vector2(1.36689, 1.36689)
theme_override_fonts/font = ExtResource("6_g7vc6")
theme_override_font_sizes/font_size = 81
text = "Happy drumming!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="tutorialText"]
material = ExtResource("1_wf4ld")
offset_left = 1063.49
offset_top = 436.789
offset_right = 2139.49
offset_bottom = 1080.79
scale = Vector2(1.30661, 0.290697)
texture_normal = ExtResource("2_yiv6j")
texture_pressed = ExtResource("4_yiv6j")

[node name="continue" type="Label" parent="tutorialText/ContinueButton"]
material = ExtResource("1_wf4ld")
layout_mode = 0
offset_left = 218.017
offset_top = 130.657
offset_right = 2484.02
offset_bottom = 548.657
scale = Vector2(0.276943, 1.15205)
theme_override_fonts/font = ExtResource("3_lr75e")
theme_override_font_sizes/font_size = 400
text = "Continue"

[node name="tuts_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_btk02")
}

[node name="MainPanel" type="Panel" parent="."]
visible = false
material = ExtResource("1_wf4ld")
anchors_preset = -1
anchor_left = 0.489583
anchor_top = 0.481481
anchor_right = 1.16844
anchor_bottom = 1.10928
offset_left = -836.0
offset_top = -304.0
offset_right = -2087.41
offset_bottom = -942.022
scale = Vector2(32.5853, 16.9506)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_g7vc6")

[node name="Panel" type="Panel" parent="."]
material = ExtResource("1_wf4ld")
offset_left = 472.0
offset_top = 272.0
offset_right = 1504.0
offset_bottom = 776.0
scale = Vector2(1.15511, 1.15511)
theme_override_styles/panel = SubResource("StyleBoxTexture_btk02")

[node name="Label" type="Label" parent="Panel"]
material = ExtResource("1_wf4ld")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -720.732
offset_top = 55.4059
offset_right = 825.268
offset_bottom = 140.406
grow_horizontal = 2
scale = Vector2(0.029547, 0.0617386)
theme_override_fonts/font = ExtResource("3_lr75e")
theme_override_font_sizes/font_size = 80
text = "First time playing Drumverse?"

[node name="YesButton" type="TextureButton" parent="Panel"]
material = ExtResource("1_wf4ld")
offset_left = -110.812
offset_top = 270.104
offset_right = 965.188
offset_bottom = 914.104
scale = Vector2(0.00964958, 0.0179203)
texture_normal = ExtResource("2_yiv6j")
texture_pressed = ExtResource("4_yiv6j")

[node name="Yes" type="Label" parent="Panel/YesButton"]
material = ExtResource("1_wf4ld")
layout_mode = 0
offset_left = 80.0425
offset_top = 133.404
offset_right = 978.042
offset_bottom = 551.404
theme_override_fonts/font = ExtResource("3_lr75e")
theme_override_font_sizes/font_size = 400
text = "Yes"

[node name="NoButton" type="TextureButton" parent="Panel"]
material = ExtResource("1_wf4ld")
offset_left = 609.465
offset_top = 270.104
offset_right = 1685.47
offset_bottom = 914.104
scale = Vector2(0.00964958, 0.0179203)
texture_normal = ExtResource("2_yiv6j")
texture_pressed = ExtResource("4_yiv6j")

[node name="No" type="Label" parent="Panel/NoButton"]
material = ExtResource("1_wf4ld")
layout_mode = 0
offset_left = 228.983
offset_top = 133.404
offset_right = 1126.98
offset_bottom = 551.404
theme_override_fonts/font = ExtResource("3_lr75e")
theme_override_font_sizes/font_size = 400
text = "No"

[connection signal="pressed" from="tutorialText/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Panel/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Panel/NoButton" to="." method="_on_no_button_pressed"]
